[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dabao"
version = "0.1.0"
authors = [
    { name = "Lin", email = "2758003362@qq.com" }
]
description = "A sample Python package"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 可选依赖（仅纯Python库）
dependencies = [
    # "requests>=2.25.1",
]
